--- a/package.yaml
+++ b/package.yaml
@@ -1,13 +1,13 @@
 name:                yampa-sdl2
-version:             0.0.1.0
-#synopsis:
-#description:
+version:             0.0.1.1
+synopsis:            Yampa and SDL2 made easy
+description:         yampa-sdl2 lets you start coding your app right away instead of dealing with SDL2 first.
 homepage:            https://github.com/Simre1/YampaSDL2#readme
 license:             MIT
 author:              Simre
 maintainer:          simre4775@gmail.com
 copyright:           2018 Simre
-category:            Graphics,Game
+category:            Graphics
 extra-source-files:
 - README.md
 
@@ -20,7 +20,6 @@ dependencies:
   - StateVar
   - text
   - linear
-  - microlens
 
 library:
   source-dirs:      src
