--- a/package.yaml
+++ b/package.yaml
@@ -1,5 +1,5 @@
 name:                yampa-sdl2
-version:             0.0.2.0
+version:             0.0.2.1
 synopsis:            Yampa and SDL2 made easy
 description:         yampa-sdl2 lets you start coding your app right away instead of dealing with SDL2 first.
 homepage:            https://github.com/Simre1/YampaSDL2#readme
@@ -14,7 +14,7 @@ extra-source-files:
 dependencies:
   - base >= 4.7 && < 5
   - Yampa
-  - sdl2
+  - sdl2 >= 2.2.0
   - sdl2-gfx
   - colour
   - StateVar
