Disabling experimental render

--- a/yampa-sdl2.cabal
+++ b/yampa-sdl2.cabal
@@ -2,10 +2,10 @@
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 694c40d0bc1120f6be07f773d63f640aa6d1762152dd862b39c3968f7b793628
+-- hash: cce52dd189679a994cdbaa8dcc65371aa6c08473eb4bba5e5a75d5acadbde803
 
 name:           yampa-sdl2
-version:        0.0.3.0
+version:        0.0.3.1
 synopsis:       Yampa and SDL2 made easy
 description:    yampa-sdl2 lets you start coding your app right away instead of dealing with SDL2 first.
 category:       Graphics
@@ -30,6 +30,7 @@ library
       YampaSDL2.AppOutput
       YampaSDL2.Backend
       YampaSDL2.Backend.Close
+      YampaSDL2.Backend.ExperimentalOutput
       YampaSDL2.Backend.Init
       YampaSDL2.Backend.Input
       YampaSDL2.Backend.Output
@@ -48,6 +49,7 @@ library
     , linear
     , sdl2 >=2.2.0
     , sdl2-gfx
+    , stm
     , text
   default-language: Haskell2010
 
@@ -66,6 +68,7 @@ test-suite YampaSDL2-test
     , linear
     , sdl2 >=2.2.0
     , sdl2-gfx
+    , stm
     , text
     , yampa-sdl2
   default-language: Haskell2010
