--- a/package.yaml
+++ b/package.yaml
@@ -1,5 +1,5 @@
 name:                yampa-sdl2
-version:             0.0.3.0
+version:             0.0.3.1
 synopsis:            Yampa and SDL2 made easy
 description:         yampa-sdl2 lets you start coding your app right away instead of dealing with SDL2 first.
 homepage:            https://github.com/Simre1/YampaSDL2#readme
@@ -20,6 +20,7 @@ dependencies:
   - StateVar
   - text
   - linear
+  - stm
 
 library:
   source-dirs:      src
