--- a/yampa-sdl2.cabal
+++ b/yampa-sdl2.cabal
@@ -1,11 +1,11 @@
--- This file has been generated from package.yaml by hpack version 0.21.2.
+-- This file has been generated from package.yaml by hpack version 0.27.0.
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: cce52dd189679a994cdbaa8dcc65371aa6c08473eb4bba5e5a75d5acadbde803
+-- hash: 985c6ac66ebbe3e0cc6a4cbc7b966426a39eec76416c5e92d001dc32e271a8b9
 
 name:           yampa-sdl2
-version:        0.0.3.1
+version:        0.0.3.3
 synopsis:       Yampa and SDL2 made easy
 description:    yampa-sdl2 lets you start coding your app right away instead of dealing with SDL2 first.
 category:       Graphics
@@ -30,11 +30,11 @@ library
       YampaSDL2.AppOutput
       YampaSDL2.Backend
       YampaSDL2.Backend.Close
-      YampaSDL2.Backend.ExperimentalOutput
       YampaSDL2.Backend.Init
       YampaSDL2.Backend.Input
       YampaSDL2.Backend.Output
       YampaSDL2.Backend.Parse
+      YampaSDL2.Backend.RenderObject
       YampaSDL2.Backend.SDL
       YampaSDL2.Geometry
       YampaSDL2.MainLoop
@@ -47,10 +47,12 @@ library
     , base >=4.7 && <5
     , colour
     , linear
-    , sdl2 >=2.2.0
+    , monad-memo
+    , sdl2
     , sdl2-gfx
     , stm
     , text
+    , vector
   default-language: Haskell2010
 
 test-suite YampaSDL2-test
@@ -66,9 +68,11 @@ test-suite YampaSDL2-test
     , base
     , colour
     , linear
-    , sdl2 >=2.2.0
+    , monad-memo
+    , sdl2
     , sdl2-gfx
     , stm
     , text
+    , vector
     , yampa-sdl2
   default-language: Haskell2010
