--- a/yampa-sdl2.cabal
+++ b/yampa-sdl2.cabal
@@ -2,10 +2,10 @@
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: c6c36163a7a0893f131b1e4307ea568c569517bf51bf200924e0753b7ea0e2f2
+-- hash: c0529c23522c01996b2122952fb9d004d9c388830ac6d9080eba4254962d42e4
 
 name:           yampa-sdl2
-version:        0.1.0.2
+version:        0.1.0.3
 synopsis:       Yampa and SDL2 made easy
 description:    yampa-sdl2 lets you start coding your app right away instead of dealing with SDL2 first.
 category:       Scene
@@ -42,6 +42,7 @@ library
       YampaSDL2.Draw
       YampaSDL2.Drawable.Circle
       YampaSDL2.Drawable.Image
+      YampaSDL2.Drawable.Point
       YampaSDL2.Drawable.Rectangle
       YampaSDL2.Init
       YampaSDL2.InputOutput
